--- a/config.yml
+++ b/config.yml
@@ -97,7 +97,7 @@ defaultContentLanguage: en
 #
 # Broken example:
 # baseUrl: /
-baseURL: https://quasi.place
+baseURL: https://quasi.place/
 
 # For features like Last modified, you
 # need to use a Git repository. If you
