--- a/config.yml
+++ b/config.yml
@@ -168,8 +168,8 @@ params:
   #
   # dateFormat Default: "January 2, 2006 at 3:04 PM"
   # shortDateFormat Default: "15:04 — Jan 2"
-  dateFormat: January 2, 2006 at 3:04 PM UTC
-  shortDateFormat: 15:04 UTC — Jan 2
+  dateFormat: January 2, 2006 at 3:04 PM EST
+  shortDateFormat: 15:04 EST — Jan 2
 
   # Should relative time (x min ago) be used?
   #
@@ -194,7 +194,7 @@ params:
   #
   # Default: `true`
   # BOOLEAN; `true`, `false`
-  useRelativeTime: true
+  useRelativeTime: false
  
   # If enabled, doesn't show seconds on relative times.
   #
